<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/mapsFragment"
            android:icon="@drawable/route_9243898"
            android:title="@string/journey_planner" />
        <item
            android:id="@+id/ticketFragment"
            android:icon="@drawable/ticket_black"
            android:title= "@string/tickets" />
        <item
            android:id="@+id/nav_settings"
            android:title="@string/action_settings"
            android:icon="@drawable/baseline_settings_24"/>

        <item
            android:id="@+id/journeyReserveView"
            android:title="@string/reserve_journey"
            android:icon="@drawable/baseline_settings_24"/>
    </group>
</menu>