<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/mapsFragment">

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.hashimte.hashbus1.ui.settings.SettingsFragment"
        android:label="@string/action_settings"
        tools:layout="@layout/fragment_settings" />
    <fragment
        android:id="@+id/mapsFragment"
        android:name="com.hashimte.hashbus1.ui.map.MapsFragment"
        android:label="@string/journey_planner"
        tools:layout="@layout/fragment_maps" />
    <fragment
        android:id="@+id/ticketFragment"
        android:name="com.hashimte.hashbus1.ui.ticket.TicketFragment"
        android:label="@string/tickets"
        tools:layout="@layout/fragment_ticket" />
    <fragment
        android:id="@+id/buyTicketFragment"
        android:name="com.hashimte.hashbus1.ui.ticket.BuyTicketFragment"
        android:label="@string/buy_tickets"
        tools:layout="@layout/fragment_buy_ticket" />
    <fragment
        android:id="@+id/showYourTicketFragment"
        android:name="com.hashimte.hashbus1.ui.ticket.ShowYourTicketFragment"
        android:label="@string/your_tickets"
        tools:layout="@layout/fragment_show_your_ticket" />
    <activity
        android:id="@+id/shortestPath"
        android:name="com.hashimte.hashbus1.ui.ticket.ShortestPath"
        android:label="activity_shortest_path"
        tools:layout="@layout/activity_shortest_path" />
    <activity
        android:id="@+id/journeyReserveView"
        android:name="com.hashimte.hashbus1.ui.reserve.JourneyReserveView"
        android:label="activity_journey_reserve_view"
        tools:layout="@layout/activity_journey_reserve_view" />
</navigation>